Bootstrap file upload

--- a/08-16-23/Pial_Bootstrap/index.html
+++ b/08-16-23/Pial_Bootstrap/index.html
@@ -24,12 +24,12 @@
     </div>
     <div class="container d-flex mt-3">
         <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
                 <div class="d-flex justify-content-center align-item-center">
-                    <img src="bjit-logo2.svg" width="300px" height="300px">
+                    <img src="bjit-logo2.svg" width="200px" height="200px">
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <p class="text-justify p-3">Welcome to the exciting world of technology at the <strong>BJIT Tech Conference!</strong>  This highly anticipated event is a melting pot of innovative ideas, cutting-edge programming concepts, and the latest web frameworks that are shaping the digital landscape. Whether you're a seasoned developer, a coding enthusiast, or simply curious about the ever-evolving realm of tech, the BJIT Tech Conference promises an unforgettable experience. Dive into the heart of programming as industry luminaries and thought leaders come together to share their insights, experiences, and expertise. With a diverse range of sessions, workshops, and panel discussions, attendees can expect to gain a deep understanding of the trends, challenges, and opportunities that define modern programming and web frameworks.</p>
     
             </div>
