Responsive issues solve

--- a/08-16-23/Pial_Bootstrap/index.html
+++ b/08-16-23/Pial_Bootstrap/index.html
@@ -43,11 +43,11 @@
 
 
 
-
+    <div class="container bg-primary p-2 rounded">
+        <h2 class="text-center text-white">Conference Sessions' Schedule</h2>
+    </div>
     <div class="container">
-        <div class="container bg-primary p-2 rounded">
-            <h2 class="text-center text-white">Conference Sessions' Schedule</h2>
-        </div>
+        
         <div class="table-responsive rounded">
             <table class="table table-hover">
                 <thead class="thead-info">
@@ -115,11 +115,11 @@
 
 
 
-
-    <div class="container mt-5" id="formDiv">
-        <div class="bg-primary rounded">
-            <h3 class="card-title text-center text-white p-2 ">Registration Form</h3>
-        </div>
+    <div class="bg-primary container mt-5 rounded">
+        <h3 class="card-title text-center text-white p-2 ">Registration Form</h3>
+    </div>
+    <div class="container " id="formDiv">
+        
         <form id="registration-form">
             <div class="form-group mt-2">
                 <label for="name">Name</label>
@@ -182,17 +182,17 @@
 
     <footer class="container mt-5 p-3 bg-primary text-dark rounded">
         <div class="row">
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <strong>Event Details</strong> <br>
             <span class="text-white">Tech conference 2023 by BJIT Academy</span> <br>
             <span class="text-white">Date: August 16-18, 2023</span>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <strong>Contact Information</strong> <br>
             <span class="text-white">Email: info@bjitacademy.com</span> <br>
             <span class="text-white">Phone: +123-456-7890</span>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <strong>Follow Us</strong> <br>
             <a href="#" ><i class="fa-brands fa-square-facebook fa-2xl text-white"></i></a> |
             <a href="#" ><i class="fa-brands fa-square-instagram fa-2xl text-white"></i></a> |
